# agentd

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
crates/smith-attestation/: Cargo.toml
crates/smith-bus/: Cargo.toml  cobertura.xml
crates/smith-config/: Cargo.toml  bus-coverage.lcov  config-coverage.lcov  metrics-coverage.lcov
crates/smith-jailer/: Cargo.toml
crates/smith-jailer/src/: landlock.rs  landlock_security_tests.rs  landlock_stub.rs  lib.rs  namespaces_stub.rs  seccomp_stub.rs
crates/smith-logging/: Cargo.toml
crates/smith-protocol/: Cargo.toml
infra/: README.md
infra/compose/: docker-compose.yaml
infra/opa/: opa.yaml
npm/agentd/: package.json
npm/agentd-darwin-arm64/: package.json
npm/agentd-darwin-x64/: package.json
npm/agentd-linux-arm64/: package.json
npm/agentd-linux-x64/: package.json
policy/: network.rego
policy/data/: egress_config.json  gateway_config.json
proto/: agentd.proto
scripts/: npm-publish.sh
src/: admission_pipeline.rs  bootstrap.rs  health.rs  idempotency.rs  intent.rs  lib.rs  main.rs  nats.rs  nats_testing.rs  policy.rs  runtime.rs  schema.rs  util.rs
src/auth/: allow_all.rs  jwt.rs  peer_creds.rs  signature.rs
src/capabilities/: benchmark_statistics.rs  fs_read_security_tests.rs  http_fetch_security_tests.rs  http_fetch_validation.rs  (+2 more)
tests/: capability_integration_tests.rs  comprehensive_security_tests.rs  isolation_integration.rs  micro_vm_tests.rs  security_error_handling_tests.rs  security_penetration_tests.rs  simple_planner_test.rs  test_config.rs
(+63 files in other folders)
