[package]
name = "smith-jailer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Secure sandboxing and isolation for capability execution"
keywords = ["security", "sandbox", "landlock", "seccomp", "cgroups"]
categories = ["os", "authentication"]

[lints.rust]
warnings = "allow"
missing_docs = "allow"
unsafe_code = "allow"  # Required for sandboxing operations (Landlock, seccomp, namespaces)

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Core dependencies
anyhow = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# UUID support
uuid = { workspace = true, features = ["v4", "serde"] }

# Security and sandboxing
libc = "0.2"
nix = { version = "0.29", features = ["process", "mount", "user", "fs", "sched"] }

# Internal dependencies
smith-protocol = { path = "../smith-protocol" }
smith-config = { path = "../smith-config" }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = "1.0"

[features]
default = ["landlock"]
landlock = []
